@@ -1,3 +1,7 @@
+2013-08-20 Freja Nordsiek
+	* Added hardware documentation to AD56X4.* and README.md and
+	  library documentation to README.md.
+
 2013-08-19 Freja Nordsiek
 	* Changed Four_Sine_Waves.ino to use builtin value of pi.
 	* Made another powerUpDown overload call the private one.
